# my-astro

./: README.md  pyproject.toml
myastro/: cube.py  filters.py  footprint.py  image.py  load.py  measure_lines.py  mock_sed_fitting.py  my_regions.py  plot.py  qrgb_algorithm.py  regionhacks.py  rgb.py  spectral_segments.py  spectrum_general.py  visualize_footprints.py  wcshacks.py
myastro/plot/: __init__.py  _colors.py  _plot.py  _plot_images.py  _plot_spectra.py
myastro/scripts/: boris_mast_query.py  download_csv.py  jwst_fits_info.py
notebooks/: multi-jdaviz.nbconvert.ipynb
scripts/: download_csv.py
