[tool.poetry]
name = "myastro"
version = "0.1.0"
description = "Various astronomy tools for my papers"
authors = ["Dries Van De Putte <dvandepu@uwo.ca>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
astropy = "*"
astroquery = "*"
jdaviz = "*"
jwst = ">=1.15.0"
matplotlib = "*"
photutils = "*"
regions = "*"
scipy = "*"
specutils = "*"
stsynphot = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jwst_fits_info = 'myastro.scripts.jwst_fits_info:main'
