[project]
name = "myastro"
version = "0.1.0"
description = "Various astronomy tools for my papers"
authors = [{ name = "Dries Van De Putte", email = "dvandepu@uwo.ca" }]
requires-python = ">=3.11"
readme = "README.md"
license = "LICENSE"
dependencies = [
    "astropy",
    "astroquery",
    "jdaviz",
    "jwst>=1.15.0",
    "matplotlib",
    "photutils",
    "regions",
    "scipy",
    "specutils>2.0",
    "stsynphot",
    "reproject>=0.14.1,<0.15",
]

[project.scripts]
jwst_fits_info = "myastro.scripts.jwst_fits_info:main"

[dependency-groups]
dev = [
    "ruff>=0.14.1,<0.15",
    "python-lsp-server>=1.13.1,<2",
    "ty>=0.0.7,<0.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
